--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- modal -->
     <div class="modal-overlay">
       <div class="modal-container">
-        <h3>modal content</h3>
+        <h3>Hi Shiv, you are a develoer!!!</h3>
         <button class="close-btn"><i class="fas fa-times"></i></button>
       </div>
     </div>
